--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -1,6 +1,9 @@
 {
     "files": [],
     "references": [
+        { "path": "audioceratops" },
+        { "path": "rangodon" },
+        { "path": "stylimimus" },
         { "path": "utilidon" },
     ]
 }
