--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
     "name": "terrible-lizard",
     "version": "0.1.0",
     "description": "UI Library by Momappoki",
-    "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "bootstrap": "lerna bootstrap",
@@ -18,8 +17,8 @@
     "license": "MIT",
     "private": true,
     "workspaces": [
-        "packages/*",
-        "demos/*"
+        "packages/**/*",
+        "demos/**/*"
     ],
     "devDependencies": {
         "@typescript-eslint/parser": "^2.13.0",
@@ -30,9 +29,7 @@
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-react": "^7.17.0",
         "eslint-plugin-standard": "^4.0.1",
-        "lerna": "^3.19.0"
-    },
-    "dependencies": {
+        "lerna": "^3.19.0",
         "typescript": "^3.7.4"
     }
 }
