--- a/packages/rangodon/tsconfig.json
+++ b/packages/rangodon/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "include": ["index.ts", "types.ts", "Listener", "LocalData", "Numbers", "General", "DataMask", "Validation", "GlobalListeners"],
+    "include": ["src"],
     "extends": "../tsconfig.base.json",
     "compilerOptions": {
         // to override config from tsconfig.base.json
@@ -7,5 +7,7 @@
         "rootDir": ".",
         // for references
         "baseUrl": "."
-    }
+    },
+    // references required for monorepo to work
+    "references": [{ "path": "../utilidon" }]
 }
