--- a/packages/utilidon/package.json
+++ b/packages/utilidon/package.json
@@ -9,7 +9,8 @@
   "peerDependencies": {
     "lodash": "^4.17.15"
   },
-  "dependencies": {
-    "@types/lodash": "^4.14.149"
+  "devDependencies": {
+    "@types/lodash": "^4.14.149",
+    "@types/styled-components": "^4.4.1"
   }
 }
